--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ const CATEGORIES = [
 const REQUIRED_KEYS = ["VGA","CPU","MAINBOARD","RAM","SSD","PSU","CASE","COOLING","MONITOR"];
 
 const PRODUCTS = [
-  // ===== VGA =====
+  // ================= VGA =================
   {
     id:"vga-1", category:"VGA", brand:"GALAX",
     name:"RTX 5060 EX WHITE 8GB GDDR7",
@@ -579,122 +579,134 @@ const PRODUCTS = [
   },
   {
     id:"vga-3", category:"VGA", brand:"SAPPHIRE",
-    name:"PURE Radeon RX 9060 XT Gaming OC 16GB",
+    name:"PURE AMD Radeon RX 9060 XT Gaming OC 16GB",
     price:17990,
     spec:{ gpuTier:3, vram:16, length_mm:320, psu_w_min:650, powerPins:"2x 8pin" }
   },
   {
-    id:"vga-4", category:"VGA", brand:"SPARKLE",
-    name:"Intel Arc A770 Titan OC 16GB",
-    price:14990,
-    spec:{ gpuTier:2, vram:16, length_mm:300, psu_w_min:650, powerPins:"2x 8pin" }
+    id:"vga-4", category:"VGA", brand:"MSI",
+    name:"RTX 4070 Ventus 2X 12GB",
+    price:21990,
+    spec:{ gpuTier:4, vram:12, length_mm:308, psu_w_min:650, powerPins:"1x 16pin" }
   },
 
-  // ===== CPU (Demo placeholder) =====
+  // ================= CPU (ตลาดทั่วไป) =================
   {
-    id:"cpu-1", category:"CPU", brand:"COMSET",
-    name:"Performance CPU Tier 3 (Demo)",
+    id:"cpu-1", category:"CPU", brand:"Intel",
+    name:"Core i5-14400F",
     price:6990,
     spec:{ platform:"LGA1700", cpuTier:3, tdp_w:65 }
   },
   {
-    id:"cpu-2", category:"CPU", brand:"COMSET",
-    name:"Performance CPU Tier 4 (Demo)",
+    id:"cpu-2", category:"CPU", brand:"Intel",
+    name:"Core i7-14700F",
+    price:12990,
+    spec:{ platform:"LGA1700", cpuTier:5, tdp_w:125 }
+  },
+  {
+    id:"cpu-3", category:"CPU", brand:"AMD",
+    name:"Ryzen 5 7600",
+    price:7990,
+    spec:{ platform:"AM5", cpuTier:3, tdp_w:65 }
+  },
+  {
+    id:"cpu-4", category:"CPU", brand:"AMD",
+    name:"Ryzen 7 7700",
     price:10990,
-    spec:{ platform:"AM5", cpuTier:4, tdp_w:105 }
+    spec:{ platform:"AM5", cpuTier:4, tdp_w:65 }
   },
 
-  // ===== MAINBOARD =====
+  // ================= MAINBOARD =================
   {
     id:"mb-1", category:"MAINBOARD", brand:"ASUS",
-    name:"B760M DDR5 (mATX)",
+    name:"B760M (mATX) LGA1700",
     price:4990,
-    spec:{ platform:"LGA1700", formFactor:"mATX", ramType:"DDR5" }
+    spec:{ platform:"LGA1700", formFactor:"mATX", ramType:"DDR5", m2Slots:2 }
   },
   {
     id:"mb-2", category:"MAINBOARD", brand:"MSI",
-    name:"B650 ATX DDR5",
-    price:5890,
-    spec:{ platform:"AM5", formFactor:"ATX", ramType:"DDR5" }
+    name:"Z790 (ATX) LGA1700",
+    price:8990,
+    spec:{ platform:"LGA1700", formFactor:"ATX", ramType:"DDR5", m2Slots:4 }
+  },
+  {
+    id:"mb-3", category:"MAINBOARD", brand:"ASUS",
+    name:"B650M (mATX) AM5",
+    price:5490,
+    spec:{ platform:"AM5", formFactor:"mATX", ramType:"DDR5", m2Slots:2 }
   },
 
-  // ===== RAM =====
+  // ================= RAM =================
   {
     id:"ram-1", category:"RAM", brand:"ADATA",
-    name:"XPG DDR5 32GB (16x2) 6000",
+    name:"DDR5 32GB (16x2) 6000",
     price:3290,
     spec:{ ramType:"DDR5", sizeGB:32, speed:6000 }
   },
   {
-    id:"ram-2", category:"RAM", brand:"PATRIOT",
-    name:"VIPER DDR5 32GB 5600",
+    id:"ram-2", category:"RAM", brand:"CORSAIR GAMING",
+    name:"DDR5 32GB (16x2) 5600",
     price:3490,
     spec:{ ramType:"DDR5", sizeGB:32, speed:5600 }
   },
 
-  // ===== SSD =====
+  // ================= SSD =================
   {
     id:"ssd-1", category:"SSD", brand:"SAMSUNG",
-    name:"NVMe Gen4 1TB",
+    name:"NVMe 1TB Gen4",
     price:2790,
     spec:{ type:"NVMe", gen:"Gen4", sizeGB:1000 }
   },
   {
     id:"ssd-2", category:"SSD", brand:"ADATA",
-    name:"XPG NVMe Gen3 1TB",
+    name:"NVMe 1TB Gen3",
     price:2090,
     spec:{ type:"NVMe", gen:"Gen3", sizeGB:1000 }
   },
-  {
-    id:"ssd-3", category:"SSD", brand:"HIKSEMI",
-    name:"Future NVMe 1TB",
-    price:1990,
-    spec:{ type:"NVMe", gen:"Gen3", sizeGB:1000 }
-  },
 
-  // ===== PSU =====
+  // ================= PSU =================
   {
     id:"psu-1", category:"PSU", brand:"SUPER FLOWER",
     name:"650W 80+ Bronze",
     price:2190,
-    spec:{ watt:650, rating:"Bronze", pcie16pin:0 }
+    spec:{ watt:650, rating:"Bronze", pcie8pin:2, pcie16pin:0 }
   },
   {
     id:"psu-2", category:"PSU", brand:"CORSAIR COMPONENTS",
-    name:"750W 80+ Gold ATX 3.0",
+    name:"750W 80+ Gold (ATX 3.0)",
     price:3990,
-    spec:{ watt:750, rating:"Gold", pcie16pin:1 }
+    spec:{ watt:750, rating:"Gold", pcie8pin:3, pcie16pin:1 }
   },
 
-  // ===== CASE =====
+  // ================= CASE =================
   {
     id:"case-1", category:"CASE", brand:"MONTECH",
-    name:"Airflow ATX – Max VGA 360mm",
+    name:"Airflow Case (ATX) - Max VGA 360mm",
     price:1890,
-    spec:{ supports:["ATX","mATX","ITX"], maxVgaMm:360, maxCoolerHeightMm:165 }
+    spec:{ supports:["ATX","mATX","ITX"], maxVgaMm:360, maxCoolerHeightMm:165, radSupport:[240,360] }
   },
   {
     id:"case-2", category:"CASE", brand:"ANTEC",
-    name:"Mid Tower mATX – Max VGA 300mm",
+    name:"Compact (mATX) - Max VGA 300mm",
     price:1490,
-    spec:{ supports:["mATX","ITX"], maxVgaMm:300, maxCoolerHeightMm:155 }
+    spec:{ supports:["mATX","ITX"], maxVgaMm:300, maxCoolerHeightMm:155, radSupport:[240] }
   },
 
-  // ===== COOLING =====
+  // ================= COOLING =================
   {
     id:"cool-1", category:"COOLING", brand:"THERMALTAKE",
-    name:"Air Cooling Tower 160mm",
+    name:"AIR COOLING - Tower 160mm",
     price:990,
     spec:{ type:"AIR", heightMm:160 }
   },
   {
     id:"cool-2", category:"COOLING", brand:"CORSAIR COMPONENTS",
-    name:"Liquid Cooling AIO 240mm",
+    name:"LIQUID COOLING - AIO 240mm",
     price:2890,
     spec:{ type:"LIQUID", radMm:240 }
   },
 
-  // ===== MONITOR =====
+  // ================= MONITOR =================
   {
     id:"mon-1", category:"MONITOR", brand:"EVNIA",
     name:"27\" 1440p 170Hz",
@@ -708,6 +720,7 @@ const PRODUCTS = [
     spec:{ sizeInch:32, res:"4K", hz:60 }
   }
 ];
+
 
 /* =========================
    State
