Update Brand Product 4

--- a/index.html
+++ b/index.html
@@ -566,6 +566,9 @@ const REQUIRED_KEYS = ["VGA","CPU","MAINBOARD","RAM","SSD","PSU","CASE","COOLING
 const PRODUCTS = [
   // ================= VGA =================
 
+// ================= VGA : Ascenti Real Products =================
+const VGA_PRODUCTS = [
+
   {
     id:"vga-leadtek-pro-4500",
     category:"VGA",
@@ -752,7 +755,10 @@ const PRODUCTS = [
     model:"57IZN6MDCXHS",
     price:0,
     spec:{ segment:"Enthusiast" }
-  },
+  }
+
+];
+
 
   // ================= CPU (ตลาดทั่วไป) =================
   {
