--- a/login.html
+++ b/login.html
@@ -1,35 +1,12 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<title>Dealer Login | Ascenti Comset</title>
-<style>
-body{
-  background:#070a14;
-  color:#e6edf7;
-  font-family:system-ui;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  height:100vh;
-}
-.card{
-  background:#0f1733;
-  padding:24px;
-  border-radius:18px;
-  width:360px;
-  border:1px solid rgba(255,255,255,.1);
-}
-input,button{
-  width:100%;
-  padding:10px;
-  margin-top:10px;
-  border-radius:10px;
-  border:none;
-}
-button{background:#2563eb;color:white;}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Ascenti Comset</title>
+  <link rel="stylesheet" href="./assets/theme.css">
 </head>
+
 <body>
 
 <div class="card">
