--- a/login.html
+++ b/login.html
@@ -1,22 +1,67 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Ascenti Comset</title>
-  <link rel="stylesheet" href="./assets/theme.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Login • Ascenti Comset Builder</title>
+<style>
+:root{
+  --bg:#0b1020; --panel:#0f1733; --text:#e6edf7; --muted:#94a3b8;
+  --accent:#60a5fa; --accent2:#34d399; --line:rgba(255,255,255,.12);
+  --radius:18px; --shadow:0 20px 40px rgba(0,0,0,.4);
+  --sans: ui-sans-serif, system-ui, "Noto Sans Thai";
+}
+body{
+  margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
+  font-family:var(--sans); color:var(--text);
+  background:
+    radial-gradient(800px 500px at 20% 10%, rgba(96,165,250,.25), transparent 60%),
+    radial-gradient(800px 500px at 80% 20%, rgba(52,211,153,.18), transparent 60%),
+    linear-gradient(180deg,#070a14,var(--bg));
+}
+.card{
+  width:380px;
+  background:rgba(255,255,255,.06);
+  border:1px solid var(--line);
+  border-radius:var(--radius);
+  box-shadow:var(--shadow);
+  padding:26px;
+}
+h1{margin:0 0 6px;font-size:20px;}
+p{margin:0 0 18px;color:var(--muted);font-size:13px;}
+input{
+  width:100%; padding:12px 14px; margin-bottom:12px;
+  border-radius:14px; border:1px solid var(--line);
+  background:rgba(0,0,0,.25); color:var(--text);
+}
+button{
+  width:100%; padding:12px;
+  border-radius:14px; border:none;
+  background:linear-gradient(135deg,var(--accent),var(--accent2));
+  color:#071018; font-weight:600; cursor:pointer;
+}
+.footer{
+  margin-top:14px; text-align:center; font-size:12px;
+}
+a{color:var(--accent); text-decoration:none;}
+</style>
 </head>
-
 <body>
 
 <div class="card">
-  <h2>Dealer Login</h2>
-  <p>เข้าสู่ระบบสำหรับร้านค้า</p>
-  <input placeholder="Dealer Email">
-  <input type="password" placeholder="Password (mock)">
+  <h1>Ascenti Comset Builder</h1>
+  <p>Prototype Login (Demo only)</p>
+
+  <input placeholder="Email / Username" />
+  <input type="password" placeholder="Password" />
+
   <button onclick="location.href='dashboard.html'">
-    Login
+    เข้าสู่ระบบ
   </button>
+
+  <div class="footer">
+    <a href="index.html">← กลับไปหน้า Builder</a>
+  </div>
 </div>
 
 </body>
