--- a/dashboard.html
+++ b/dashboard.html
@@ -1,33 +1,70 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<title>Dealer Dashboard</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Dashboard • Ascenti Comset</title>
 <style>
-body{background:#070a14;color:#e6edf7;font-family:system-ui}
-.wrap{max-width:900px;margin:auto;padding:40px}
-.card{
-  background:#0f1733;
-  padding:20px;
-  border-radius:16px;
-  margin-bottom:16px;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap");
+body{
+  margin:0; font-family:"Noto Sans Thai",sans-serif;
+  color:#e6edf7;
+  background:linear-gradient(180deg,#070a14,#0b1020);
 }
-a{color:#60a5fa;text-decoration:none}
+.top{
+  padding:18px 24px;
+  border-bottom:1px solid rgba(255,255,255,.1);
+  display:flex; justify-content:space-between; align-items:center;
+}
+a{color:#60a5fa; text-decoration:none;}
+.wrap{padding:24px; max-width:1100px; margin:auto;}
+.grid{
+  display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:16px;
+}
+.card{
+  background:rgba(255,255,255,.06);
+  border:1px solid rgba(255,255,255,.12);
+  border-radius:18px;
+  padding:18px;
+}
+.card h3{margin:0 0 6px;}
+.card p{margin:0;color:#94a3b8;font-size:13px;}
+.btn{
+  display:inline-block; margin-top:12px;
+  padding:8px 14px; border-radius:999px;
+  background:rgba(96,165,250,.18);
+}
 </style>
 </head>
 <body>
 
+<div class="top">
+  <strong>📊 Dashboard</strong>
+  <a href="login.html">Logout</a>
+</div>
+
 <div class="wrap">
-  <h1>Dealer Dashboard</h1>
+  <div class="grid">
 
-  <div class="card">
-    <h3>🖥️ จัด Comset ใหม่</h3>
-    <a href="index.html">ไปหน้าจัดสเปค</a>
-  </div>
+    <div class="card">
+      <h3>🧩 จัด Comset ใหม่</h3>
+      <p>เข้าไปเลือกอุปกรณ์ พร้อม AI ช่วยประเมิน</p>
+      <a class="btn" href="index.html">ไปหน้า Builder</a>
+    </div>
 
-  <div class="card">
-    <h3>📁 Comset ของฉัน</h3>
-    <a href="my-comsets.html">ดูประวัติการจัดสเปค</a>
+    <div class="card">
+      <h3>📜 ประวัติการจัดสเปค</h3>
+      <p>ดู Comset ที่เคยจัด (Prototype)</p>
+      <a class="btn" href="history.html">ดู History</a>
+    </div>
+
+    <div class="card">
+      <h3>🤖 แนวคิด AI 2 ชั้น</h3>
+      <p>Rule-based + AI Optimization</p>
+      <a class="btn" href="about.html">ดูแนวคิด</a>
+    </div>
+
   </div>
 </div>
 
