--- a/share.html
+++ b/share.html
@@ -4,30 +4,30 @@
 <meta charset="UTF-8">
 <title>Shared Comset</title>
 <style>
-body{background:#070a14;color:#e6edf7;font-family:system-ui}
-.wrap{max-width:900px;margin:auto;padding:40px}
+body{margin:0;background:#0b1020;color:#e6edf7;font-family:system-ui}
+.wrap{max-width:900px;margin:auto;padding:24px}
 .card{
-  background:#0f1733;
-  padding:20px;
-  border-radius:16px;
+  background:rgba(255,255,255,.06);
+  border:1px solid rgba(255,255,255,.12);
+  border-radius:18px;padding:20px;
 }
 </style>
 </head>
 <body>
 
 <div class="wrap">
-  <h1>🖥️ Recommended Comset</h1>
+<h1>🖥️ Recommended PC Spec</h1>
 
-  <div class="card">
-    VGA: GALAX RTX 5060<br>
-    CPU: Intel Core i5<br>
-    RAM: ADATA 32GB<br>
-    SSD: Samsung 1TB<br>
-    PSU: Super Flower 750W<br>
-    <hr>
-    <b>ราคาแนะนำ (SRP): 82,900 ฿</b>
-  </div>
+<div class="card">
+<p>VGA: GALAX RTX 5060</p>
+<p>CPU: Intel Core i5</p>
+<p>RAM: ADATA 32GB</p>
+<p>SSD: Samsung 1TB</p>
+<p>PSU: Super Flower 750W</p>
 
+<hr>
+<p><strong>ราคาแนะนำ (SRP): 86,900 ฿</strong></p>
+</div>
 </div>
 
 </body>
