--- a/dashboard.html
+++ b/dashboard.html
@@ -38,6 +38,18 @@ a{color:#60a5fa; text-decoration:none;}
 </style>
 </head>
 <body>
+<nav class="navbar">
+  <div class="nav-left">
+    <strong>Ascenti Comset</strong>
+  </div>
+  <div class="nav-right">
+    <a href="dashboard.html">Dashboard</a>
+    <a href="index.html">Builder</a>
+    <a href="my-comsets.html">My Comsets</a>
+    <a href="about.html">AI Concept</a>
+    <a href="login.html" class="logout">Logout</a>
+  </div>
+</nav>
 
 <div class="top">
   <strong>📊 Dashboard</strong>
