--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,19 @@ a{color:#60a5fa; text-decoration:none;}
   padding:8px 14px; border-radius:999px;
   background:rgba(96,165,250,.18);
 }
+.navbar{
+  display:flex;justify-content:space-between;align-items:center;
+  padding:14px 22px;
+  background:rgba(15,23,51,.9);
+  border-bottom:1px solid rgba(255,255,255,.12);
+}
+.navbar a{
+  color:#e6edf7;text-decoration:none;
+  margin-left:14px;font-size:14px;
+}
+.navbar a:hover{color:#60a5fa}
+.logout{color:#fb7185}
+
 </style>
 </head>
 <body>
