--- a/comset-detail.html
+++ b/comset-detail.html
@@ -17,6 +17,19 @@ button{
   background:#22c55e;color:#022c22;font-weight:600;
 }
 a{color:#60a5fa}
+.navbar{
+  display:flex;justify-content:space-between;align-items:center;
+  padding:14px 22px;
+  background:rgba(15,23,51,.9);
+  border-bottom:1px solid rgba(255,255,255,.12);
+}
+.navbar a{
+  color:#e6edf7;text-decoration:none;
+  margin-left:14px;font-size:14px;
+}
+.navbar a:hover{color:#60a5fa}
+.logout{color:#fb7185}
+
 </style>
 </head>
 <body>
