--- a/my-comsets.html
+++ b/my-comsets.html
@@ -10,10 +10,23 @@ th,td{padding:12px;border-bottom:1px dashed rgba(255,255,255,.15)}
 th{color:#94a3b8;text-align:left}
 .wrap{max-width:1100px;margin:auto;padding:24px}
 a{color:#60a5fa;text-decoration:none}
+
+.navbar{
+  display:flex;justify-content:space-between;align-items:center;
+  padding:14px 22px;
+  background:rgba(15,23,51,.9);
+  border-bottom:1px solid rgba(255,255,255,.12);
+}
+.navbar a{
+  color:#e6edf7;text-decoration:none;
+  margin-left:14px;font-size:14px;
+}
+.navbar a:hover{color:#60a5fa}
+.logout{color:#fb7185}
+
 </style>
 </head>
 <body>
-
 <!-- NAVBAR -->
 <nav class="navbar">
   <div class="nav-left"><strong>Ascenti Comset</strong></div>
