--- a/login.html
+++ b/login.html
@@ -11,81 +11,170 @@
   --radius:18px; --shadow:0 20px 40px rgba(0,0,0,.4);
   --sans: ui-sans-serif, system-ui, "Noto Sans Thai";
 }
+
+/* ✅ ทำให้ layout ไม่พังเวลาใส่ navbar */
+*{ box-sizing:border-box; }
+
 body{
-  margin:0; min-height:100vh; display:flex; align-items:center; justify-content:center;
-  font-family:var(--sans); color:var(--text);
+  margin:0;
+  min-height:100vh;
+  font-family:var(--sans);
+  color:var(--text);
+
+  /* background เดิม */
   background:
     radial-gradient(800px 500px at 20% 10%, rgba(96,165,250,.25), transparent 60%),
     radial-gradient(800px 500px at 80% 20%, rgba(52,211,153,.18), transparent 60%),
     linear-gradient(180deg,#070a14,var(--bg));
 }
+
+/* ===== NAVBAR (เหมือนหน้าอื่น) ===== */
+.navbar{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:14px 22px;
+  background:rgba(15,23,51,.9);
+  border-bottom:1px solid rgba(255,255,255,.12);
+  position:sticky;
+  top:0;
+  backdrop-filter: blur(10px);
+}
+
+.nav-left strong{ letter-spacing:.2px; }
+
+.nav-right{
+  display:flex;
+  align-items:center;
+  gap:14px;
+}
+
+.navbar a{
+  color:#e6edf7;
+  text-decoration:none;
+  font-size:14px;
+  opacity:.9;
+}
+
+.navbar a:hover{ color:var(--accent); opacity:1; }
+
+/* ✅ หน้า Login ไม่ควรมี Logout */
+.nav-right .ghost{
+  padding:8px 12px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.14);
+  background:rgba(0,0,0,.15);
+}
+
+/* ===== CENTER LAYOUT ===== */
+.page{
+  min-height: calc(100vh - 58px); /* สูงหน้าลบ navbar */
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:28px 16px;
+}
+
 .card{
   width:380px;
+  max-width:100%;
   background:rgba(255,255,255,.06);
   border:1px solid var(--line);
   border-radius:var(--radius);
   box-shadow:var(--shadow);
   padding:26px;
 }
-h1{margin:0 0 6px;font-size:20px;}
-p{margin:0 0 18px;color:var(--muted);font-size:13px;}
-input{
-  width:100%; padding:12px 14px; margin-bottom:12px;
-  border-radius:14px; border:1px solid var(--line);
-  background:rgba(0,0,0,.25); color:var(--text);
-}
-button{
-  width:100%; padding:12px;
-  border-radius:14px; border:none;
-  background:linear-gradient(135deg,var(--accent),var(--accent2));
-  color:#071018; font-weight:600; cursor:pointer;
-}
-.footer{
-  margin-top:14px; text-align:center; font-size:12px;
-}
-a{color:var(--accent); text-decoration:none;}
-.navbar{
-  display:flex;justify-content:space-between;align-items:center;
-  padding:14px 22px;
-  background:rgba(15,23,51,.9);
-  border-bottom:1px solid rgba(255,255,255,.12);
-}
-.navbar a{
-  color:#e6edf7;text-decoration:none;
-  margin-left:14px;font-size:14px;
-}
-.navbar a:hover{color:#60a5fa}
-.logout{color:#fb7185}
 
+h1{margin:0 0 6px;font-size:20px;}
+p{margin:0 0 18px;color:var(--muted);font-size:13px;line-height:1.45;}
+
+input{
+  width:100%;
+  padding:12px 14px;
+  margin-bottom:12px;
+  border-radius:14px;
+  border:1px solid var(--line);
+  background:rgba(0,0,0,.25);
+  color:var(--text);
+  outline:none;
+}
+
+input:focus{
+  border-color: rgba(96,165,250,.65);
+  box-shadow: 0 0 0 3px rgba(96,165,250,.18);
+}
+
+button{
+  width:100%;
+  padding:12px;
+  border-radius:14px;
+  border:none;
+  background:linear-gradient(135deg,var(--accent),var(--accent2));
+  color:#071018;
+  font-weight:700;
+  cursor:pointer;
+}
+
+.footer{
+  margin-top:14px;
+  text-align:center;
+  font-size:12px;
+  color:var(--muted);
+}
+
+.footer a{color:var(--accent); text-decoration:none;}
+.footer a:hover{text-decoration:underline;}
+
+/* small helper row */
+.meta{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin:6px 0 14px;
+  font-size:12px;
+  color:var(--muted);
+}
+
+.chip{
+  padding:6px 10px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.12);
+  background:rgba(0,0,0,.18);
+}
 </style>
 </head>
+
 <body>
+
 <nav class="navbar">
   <div class="nav-left">
     <strong>Ascenti Comset</strong>
   </div>
   <div class="nav-right">
-    <a href="dashboard.html">Dashboard</a>
     <a href="index.html">Builder</a>
-    <a href="my-comsets.html">My Comsets</a>
     <a href="about.html">AI Concept</a>
-    <a href="login.html" class="logout">Logout</a>
+    <a class="ghost" href="dashboard.html" title="Demo only">Go Dashboard</a>
   </div>
 </nav>
 
-<div class="card">
-  <h1>Ascenti Comset Builder</h1>
-  <p>Prototype Login (Demo only)</p>
+<div class="page">
+  <div class="card">
+    <h1>Dealer Login</h1>
+    <p>สำหรับร้านค้า Dealer (Prototype) — เข้าสู่ระบบก่อนจึงจะเห็นราคา SDP และบันทึกประวัติได้</p>
 
-  <input placeholder="Email / Username" />
-  <input type="password" placeholder="Password" />
+    <div class="meta">
+      <span class="chip">Role: Dealer</span>
+      <span class="chip">Demo Mode</span>
+    </div>
 
-  <button onclick="location.href='dashboard.html'">
-    เข้าสู่ระบบ
-  </button>
+    <input placeholder="Email / Username" autocomplete="username" />
+    <input type="password" placeholder="Password" autocomplete="current-password" />
 
-  <div class="footer">
-    <a href="index.html">← กลับไปหน้า Builder</a>
+    <button onclick="location.href='dashboard.html'">เข้าสู่ระบบ</button>
+
+    <div class="footer">
+      <a href="index.html">← กลับไปหน้า Builder</a>
+    </div>
   </div>
 </div>
 
