--- a/dashboard.html
+++ b/dashboard.html
@@ -79,15 +79,21 @@ a{color:#60a5fa; text-decoration:none;}
     </div>
 
     <div class="card">
-      <h3>📜 ประวัติการจัดสเปค</h3>
-      <p>ดู Comset ที่เคยจัด (Prototype)</p>
-      <a class="btn" href="history.html">ดู History</a>
+      <h3>🧩 My Comsets</h3>
+      <p>สเปคที่คุณจัดไว้ แก้ไข ส่งฝ่ายขาย หรือแชร์ให้ลูกค้าได้</p>
+      <a class="btn" href="my-comsets.html">ดู My Comsets</a>
     </div>
 
     <div class="card">
       <h3>🤖 แนวคิด AI 2 ชั้น</h3>
       <p>Rule-based + AI Optimization</p>
       <a class="btn" href="about.html">ดูแนวคิด</a>
+    </div>
+
+    <div class="card">
+      <h3>📜 History</h3>
+      <p>บันทึกการจัดสเปคย้อนหลัง (Read-only)</p>
+      <a class="btn" href="history.html">ดู History</a>
     </div>
 
   </div>
