--- a/my-comsets.html
+++ b/my-comsets.html
@@ -1,75 +1,51 @@
-<!DOCTYPE html>
-<html lang="th">
-<head>
-<meta charset="UTF-8">
-<title>My Comsets</title>
-<style>
-body{margin:0;background:#0b1020;color:#e6edf7;font-family:system-ui}
-table{width:100%;border-collapse:collapse}
-th,td{padding:12px;border-bottom:1px dashed rgba(255,255,255,.15)}
-th{color:#94a3b8;text-align:left}
-.wrap{max-width:1100px;margin:auto;padding:24px}
-a{color:#60a5fa;text-decoration:none}
-
-.navbar{
-  display:flex;justify-content:space-between;align-items:center;
-  padding:14px 22px;
-  background:rgba(15,23,51,.9);
-  border-bottom:1px solid rgba(255,255,255,.12);
-}
-.navbar a{
-  color:#e6edf7;text-decoration:none;
-  margin-left:14px;font-size:14px;
-}
-.navbar a:hover{color:#60a5fa}
-.logout{color:#fb7185}
-
-</style>
-</head>
-<body>
-<!-- NAVBAR -->
-<nav class="navbar">
-  <div class="nav-left"><strong>Ascenti Comset</strong></div>
-  <div class="nav-right">
-    <a href="dashboard.html">Dashboard</a>
-    <a href="index.html">Builder</a>
-    <a href="my-comsets.html">My Comsets</a>
-    <a href="about.html">AI Concept</a>
-    <a href="login.html" class="logout">Logout</a>
-  </div>
-</nav>
-
-<div class="wrap">
-<h1>📁 My Comsets</h1>
-
 <table>
 <thead>
 <tr>
-  <th>Date</th>
-  <th>Purpose</th>
+  <th>Comset</th>
   <th>Total (SDP)</th>
+  <th>Sales</th>
   <th>Status</th>
-  <th></th>
+  <th>Action</th>
 </tr>
 </thead>
 <tbody>
+
 <tr>
-  <td>16/12/2025</td>
-  <td>Gaming 1440p</td>
+  <td>Gaming RTX 5060</td>
   <td>78,500 ฿</td>
-  <td>Draft</td>
-  <td><a href="comset-detail.html">View</a></td>
+  <td>สมชาย</td>
+  <td>
+    <span style="color:#fbbf24">● Sent to Sales</span>
+  </td>
+  <td>
+    <a href="comset-detail.html">View</a> |
+    <a href="#">Edit</a>
+  </td>
 </tr>
+
 <tr>
-  <td>10/12/2025</td>
-  <td>Workstation</td>
+  <td>Workstation Ryzen</td>
   <td>96,200 ฿</td>
-  <td>Sent to Sales</td>
-  <td><a href="comset-detail.html">View</a></td>
+  <td>วิรัช</td>
+  <td>
+    <span style="color:#34d399">● Quoted</span>
+  </td>
+  <td>
+    <a href="comset-detail.html">View</a>
+  </td>
 </tr>
+
+<tr>
+  <td>Office Set</td>
+  <td>42,000 ฿</td>
+  <td>-</td>
+  <td>
+    <span style="color:#94a3b8">● Draft</span>
+  </td>
+  <td>
+    <a href="index.html">Edit</a>
+  </td>
+</tr>
+
 </tbody>
 </table>
-</div>
-
-</body>
-</html>
