--- a/my-comsets.html
+++ b/my-comsets.html
@@ -9,7 +9,11 @@ body{margin:0;background:#0b1020;color:#e6edf7;font-family:system-ui}
 .wrap{max-width:1200px;margin:auto;padding:24px}
 h1{margin-top:0}
 table{width:100%;border-collapse:collapse;font-size:14px}
-th,td{padding:14px;border-bottom:1px solid rgba(255,255,255,.12);vertical-align:top}
+th,td{
+  padding:14px;
+  border-bottom:1px solid rgba(255,255,255,.12);
+  vertical-align:top
+}
 th{color:#94a3b8;font-weight:600;text-align:left}
 small{color:#94a3b8}
 .tag{
@@ -22,12 +26,11 @@ small{color:#94a3b8}
 .gaming{background:#2563eb}
 .office{background:#475569}
 .promo{background:#16a34a}
-.status{
-  font-weight:600;
-}
+.status{font-weight:600}
 .sent{color:#fbbf24}
 .quoted{color:#34d399}
 .draft{color:#94a3b8}
+
 .navbar{
   display:flex;justify-content:space-between;align-items:center;
   padding:14px 22px;
@@ -58,8 +61,8 @@ a{color:#60a5fa;text-decoration:none}
 <thead>
 <tr>
   <th>Comset</th>
+  <th>Created Date</th>
   <th>Total (SDP)</th>
-  <th>Sales</th>
   <th>Status</th>
   <th></th>
 </tr>
@@ -74,8 +77,8 @@ a{color:#60a5fa;text-decoration:none}
     <span class="tag gaming">Gaming</span>
     <span class="tag promo">Promo</span>
   </td>
+  <td>16/12/2025</td>
   <td>78,500 ฿</td>
-  <td>สมชาย</td>
   <td class="status sent">● Sent to Sales</td>
   <td><a href="comset-detail.html">View</a></td>
 </tr>
@@ -86,8 +89,8 @@ a{color:#60a5fa;text-decoration:none}
     <small>Case: Montech | GPU: Onboard | CPU: i3</small><br>
     <span class="tag office">Office</span>
   </td>
+  <td>14/12/2025</td>
   <td>42,300 ฿</td>
-  <td>-</td>
   <td class="status draft">● Draft</td>
   <td><a href="index.html">Edit</a></td>
 </tr>
@@ -98,8 +101,8 @@ a{color:#60a5fa;text-decoration:none}
     <small>Case: Thermaltake | GPU: RX 9060 XT | CPU: i9</small><br>
     <span class="tag gaming">Gaming</span>
   </td>
+  <td>10/12/2025</td>
   <td>69,200 ฿</td>
-  <td>วิรัช</td>
   <td class="status quoted">● Quoted</td>
   <td><a href="comset-detail.html">View</a></td>
 </tr>
